--- a/app/views/editorial/about.html.erb
+++ b/app/views/editorial/about.html.erb
@@ -1,4 +1,10 @@
-<div class="prodotti_scheda_cont">
+<h2><%=l(:about)%></h2>
+  In questa pagina:
+  <ul> 
+    <li>Carta d'intenti della linea editoriale</li>
+    <li>Presentazione Merce dolci</li>
+  </ul> 
+  <div class="prodotti_scheda_cont">
 
                 <div class="testo_static_container">
                     <div style="width: 653px; height: 40px; float: left; background-image: url('images/contatti_head.png')">
