--- a/app/views/editorial/articolo.html.erb
+++ b/app/views/editorial/articolo.html.erb
@@ -1,2 +1,10 @@
-<h1>Editorial#articolo</h1>
-<p>Find me in app/views/editorial/articolo.html.erb</p>
+<h2><%=l(:details_articolo)%></h2>
+  In questa pagina:
+  <ul> 
+    <li>Presentazione di un articolo</li>
+    <li>PERMESSI sulla vissualizzazione dei contenuti</li>
+    <li>AZIONE: ritorno a la lista articoli</li>
+    <li>AZIONE: proponi un quesito legato a questo articolo</li>
+    <li>NETWORK: Mi piace? --> futuro</li>
+    <li>NETWORK: Commenta? --> futuro</li>
+  </ul> 
