--- a/app/views/editorial/edizione.html.erb
+++ b/app/views/editorial/edizione.html.erb
@@ -1,2 +1,9 @@
-<h1>Editorial#edizione</h1>
-<p>Find me in app/views/editorial/edizione.html.erb</p>
+<h2><%=l(:details_edizione)%></h2>
+  In questa pagina:
+  <ul> 
+    <li>La newsletter vera e propria</li>
+    <li>PERMESSI sulla vissualizzazione dei contenuti</li>
+    <li>AZIONE: ritorno a la lista edizioni</li>
+    <li>LINK: ai articoli</li>
+    <li>LINK: alle sezioni</li>
+  </ul> 
