--- a/app/views/editorial/edizioni.html.erb
+++ b/app/views/editorial/edizioni.html.erb
@@ -1,2 +1,9 @@
-<h1>Editorial#edizioni</h1>
-<p>Find me in app/views/editorial/edizioni.html.erb</p>
+<h2><%=l(:list_edizioni)%></h2>
+  In questa pagina:
+  <ul> 
+    <li>lista delle edizioni</li>
+    <li>filtraggio sul contenuto</li>
+    <li>Vista statistica: sezioni, numero articoli</li>
+    <li>LINK: alla singola sezione</li>
+    <li>LINK: al singolo articolo</li>
+  </ul> 
