--- a/app/views/editorial/help.html.erb
+++ b/app/views/editorial/help.html.erb
@@ -1,3 +1,8 @@
+<h2><%=l(:help)%></h2>
+  In questa pagina:
+  <ul> 
+    <li>How to ed informazioni per aiutare l'utente</li>
+  </ul> 
 <div class="footer">
             <div style="margin-top: 8px" class="footer_contact">
                 <div class="footer_tel">
