--- a/app/views/editorial/login.html.erb
+++ b/app/views/editorial/login.html.erb
@@ -1,2 +1,5 @@
-<h1>Editorial#login</h1>
-<p>Find me in app/views/editorial/login.html.erb</p>
+<h2><%=l(:login)%></h2>
+  In questa pagina:
+  <ul> 
+    <li>pagina di login: NON dovrebbe servire solo se vogliamo fare cose custom</li>
+  </ul> 
