--- a/app/views/editorial/poniquesito.html.erb
+++ b/app/views/editorial/poniquesito.html.erb
@@ -1,2 +1,7 @@
-<h1>Editorial#poniquesito</h1>
-<p>Find me in app/views/editorial/poniquesito.html.erb</p>
+<h2><%=l(:poniquesito)%></h2>
+  In questa pagina:
+  <ul> 
+    <li>Un utente definisce un titolo</li>
+    <li>Un utente immette un testo</li>
+    <li>AZIONE: SALVA ed allega all'editoriale in corso di elaborazione</li>
+  </ul> 
