--- a/app/views/editorial/quesito.html.erb
+++ b/app/views/editorial/quesito.html.erb
@@ -1,2 +1,11 @@
-<h1>Editorial#quesito</h1>
-<p>Find me in app/views/editorial/quesito.html.erb</p>
+<h2><%=l(:details_quesito)%></h2>
+  In questa pagina:
+  <ul> 
+    <li>Presentazione di un quesito</li>
+    <li>Vissualizzazione della risposta se STATO CHIUSO</li>
+    <li>PERMESSI sulla vissualizzazione dei contenuti</li>
+    <li>LINK: ritorno a la lista quesiti</li>
+    <li>LINK: all'edizione dove è paruto</li>
+    <li>NETWORK: Mi piace? --> futuro</li>
+    <li>NETWORK: Commenta? --> futuro</li>
+  </ul> 
