--- a/app/views/editorial/register.html.erb
+++ b/app/views/editorial/register.html.erb
@@ -1,2 +1,6 @@
-<h1>Editorial#register</h1>
-<p>Find me in app/views/editorial/register.html.erb</p>
+<h2><%=l(:register)%></h2>
+  In questa pagina:
+  <ul> 
+    <li>Wizard di auto compilazione editoriale</li>
+    <li>AZIONE: registra nuovo utente, invia email, [associa ad organismo associato + email verificazione al power user]</li>
+  </ul> 
