--- a/app/views/editorial/ricerca.html.erb
+++ b/app/views/editorial/ricerca.html.erb
@@ -1,5 +1,9 @@
 <h2><%= l(:label_search) %></h2>
-
+  In questa pagina:
+  <ul> 
+    <li>Ricerca generale sullo storico</li>
+    <li>Presentazione risultati per tipo ricerca</li>
+  </ul> 
 <div class="box">
 <% form_tag({}, :method => :get) do %>
 <%= label_tag "search-input", l(:description_search), :class => "hidden-for-sighted" %>
