--- a/app/views/editorial/sezione.html.erb
+++ b/app/views/editorial/sezione.html.erb
@@ -1,3 +1,10 @@
-<h1>Editorial#sezione</h1>
-<p>Find me in app/views/editorial/sezione.html.erb</p>
+<h2><%=l(:details_sezione)%></h2>
+  In questa pagina:
+  <ul> 
+    <li>Summary e definizione della sezione</li>
+    <li>Lista articoli correlati</li>
+    <li>Filtraggio sul contenuto</li>
+    <li>LINK: all'edizione</li>
+    <li>LINK: al singolo articolo</li>
+  </ul> 
 <h1> id = <%= @id %> </h1>
