--- a/app/views/fees/paganti.html.erb
+++ b/app/views/fees/paganti.html.erb
@@ -1,5 +1,7 @@
 <h2><%=l(:list_paganti)%></h2>
-
+  <div id="footer-menu" class="box">
+    <%= render_menu :menu_fee_fs %>
+  </div>
   In questa pagina:
   <ul> 
     <li>List utenti privati che paganno: username, Organismo associato, Privato o Numero aderenti(membri), data registrazione, </li>
