--- a/app/views/fees/privati.html.erb
+++ b/app/views/fees/privati.html.erb
@@ -1,5 +1,7 @@
 <h2><%=l(:list_privati)%></h2>
-
+  <div id="footer-menu" class="box">
+    <%= render_menu :menu_fee_fs %>
+  </div>
   In questa pagina:
   <ul> 
     <li>List utenti con ruolo privato(INVITATO): username, data registrazione, Organismo associato</li>
