--- a/app/views/fees/registrati.html.erb
+++ b/app/views/fees/registrati.html.erb
@@ -1,5 +1,7 @@
 <h2><%=l(:list_registrati)%></h2>
-
+  <div id="footer-menu" class="box">
+    <%= render_menu :menu_fee_fs %>
+  </div>
   In questa pagina:
   <ul> 
     <li>List utenti in stato di registrazione: username, data registrazione, manca x giorni al periodo di prova, data ultimo pagamento</li>
