--- a/app/views/editorial/articoli.html.erb
+++ b/app/views/editorial/articoli.html.erb
@@ -1,2 +1,8 @@
-<h1>Editorial#articoli</h1>
-<p>Find me in app/views/editorial/articoli.html.erb</p>
+<h2><%=l(:list_articoli)%></h2>
+  In questa pagina:
+  <ul> 
+    <li>Lista degli articoli</li>
+    <li>Filtraggio sul contenuto</li>
+    <li>LINK: all'edizione di ciascun articoli</li>
+    <li>LINK: alla sezione di ciascun articoli</li>
+  </ul> 
