--- a/app/views/editorial/contact.html.erb
+++ b/app/views/editorial/contact.html.erb
@@ -1,4 +1,9 @@
-<div class="prodotti_scheda_cont">
+<h2><%=l(:contact)%></h2>
+  In questa pagina:
+  <ul> 
+    <li>Contatti per Merce dolci</li>
+  </ul> 
+  <div class="prodotti_scheda_cont">
 
                 <div class="testo_static_container">
                     <div style="width: 653px; height: 40px; float: left; background-image: url('images/contatti_head.png')">
