--- a/app/views/editorial/quesiti.html.erb
+++ b/app/views/editorial/quesiti.html.erb
@@ -1,2 +1,9 @@
-<h1>Editorial#quesiti</h1>
-<p>Find me in app/views/editorial/quesiti.html.erb</p>
+<h2><%=l(:list_quesiti)%></h2>
+  In questa pagina:
+  <ul> 
+    <li>lista dei quesiti</li>
+    <li>Presentazione Merce dolci</li>
+    <li>LINK: all'edizione</li>
+    <li>LINK: ritorna alla lis</li>
+    <li>LINK: al singolo articolo</li>
+  </ul> 
