--- a/app/views/fees/associati.html.erb
+++ b/app/views/fees/associati.html.erb
@@ -1,5 +1,7 @@
 <h2><%=l(:list_associati)%></h2>
-
+  <div id="footer-menu" class="box">
+    <%= render_menu :menu_fee_fs %>
+  </div>
   In questa pagina:
   <ul> 
     <li>List utenti membri si un organismo associato: username, organismo associato, Data ultimo pagamento Organismo, data scadenza utente/Org.Asso</li>
