--- a/app/views/fees/scaduti.html.erb
+++ b/app/views/fees/scaduti.html.erb
@@ -1,5 +1,7 @@
 <h2><%=l(:list_scaduti)%></h2>
-
+  <div id="footer-menu" class="box">
+    <%= render_menu :menu_fee_fs %>
+  </div>
   In questa pagina:
   <ul> 
     <li>List utenti in stato di archiviazione: username, data registrazione, data ultimo pagamento</li>
