Preface editorial page

--- a/app/views/editorial/articolo.html.erb
+++ b/app/views/editorial/articolo.html.erb
@@ -3,7 +3,9 @@
   <ul> 
     <li>Presentazione di un articolo</li>
     <li>PERMESSI sulla vissualizzazione dei contenuti</li>
-    <li>AZIONE: ritorno a la lista articoli</li>
+    <li>LINK: ritorno a la lista articoli</li>
+    <li>LINK: all'edizione dell'articolo</li>
+    <li>LINK: alla sezione dell'articolo</li>
     <li>AZIONE: proponi un quesito legato a questo articolo</li>
     <li>NETWORK: Mi piace? --> futuro</li>
     <li>NETWORK: Commenta? --> futuro</li>
