--- a/app/views/editorial/edizioni.html.erb
+++ b/app/views/editorial/edizioni.html.erb
@@ -4,6 +4,6 @@
     <li>lista delle edizioni</li>
     <li>filtraggio sul contenuto</li>
     <li>Vista statistica: sezioni, numero articoli</li>
-    <li>LINK: alla singola sezione</li>
-    <li>LINK: al singolo articolo</li>
+    <li>LINK: alle edizioni</li>
+    <li>LINK: alle sezioni</li>
   </ul> 
