--- a/app/views/fees/abbonamenti.html.erb
+++ b/app/views/fees/abbonamenti.html.erb
@@ -2,4 +2,10 @@
   <div id="footer-menu" class="box">
     <%= render_menu :menu_fee_fs %>
   </div>
+  In questa pagina:
+  <ul> 
+    <li>List utenti con abbonamento (privati associati = repetizione?), data di scadenza</li>
+    <li>Azione: Rilancia via EMAIL</li>
+    <li>Naviga: vai al dettaglio di un utente</li>
+  </ul> 
 
