--- a/app/views/fees/email_fee.html.erb
+++ b/app/views/fees/email_fee.html.erb
@@ -10,4 +10,6 @@
     <li>Editor HTML</li>
     <li>AZIONE: INVIA</li>
   </ul> 
-  
+  <p>
+    <%= link_to 'settings', email_fee_goto_settings_path %>
+  </p>
