--- a/app/views/editorial/quesiti.html.erb
+++ b/app/views/editorial/quesiti.html.erb
@@ -2,8 +2,7 @@
   In questa pagina:
   <ul> 
     <li>lista dei quesiti</li>
-    <li>Presentazione Merce dolci</li>
     <li>LINK: all'edizione</li>
-    <li>LINK: ritorna alla lis</li>
-    <li>LINK: al singolo articolo</li>
+    <li>LINK: ritorna alla lista quesiti</li>
+    <li></li>
   </ul> 
